--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ main {
 
 .nav ul {
   padding: 0 1.35rem;
+  
 }
 
 .nav li {
@@ -174,7 +175,7 @@ main {
 }
 
 .change-bg {
-  width: 460px;
-  height: 500px;
+  width: 100%;
+  height: 55%;
   transform: translate(-60%,-30%);
 }
