--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ main {
 }
 
 .change-bg {
-  width: 100%;
-  height: 55%;
+  width: 460px;
+  height: 500px;
   transform: translate(-60%,-30%);
 }
