--- a/css/style.css
+++ b/css/style.css
@@ -147,9 +147,8 @@ main {
   z-index: 1;
   width: 0;
   height: 0;
-  margin: 30px 0 20px 20px;
   background: radial-gradient(circle, rgba(5, 5, 5, 0.836), rgba(0, 0, 0, 0.918));
-  border-radius: 50%;
+  border-radius: 5%;
   transition: 0.75s ease;
   box-shadow: 2px 3px 10px rgb(183, 146, 98);
 }
@@ -176,6 +175,6 @@ main {
 
 .change-bg {
   width: 460px;
-  height: 500px;
-  transform: translate(-60%,-30%);
+height: 55%;
+  transform: translate(-50%,-20%);
 }
