--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,7 @@ div#foodList {
 }
 
 #foodList h3:hover {
-  transform: scale(0.98);
-  transition: all ease-in-out 0.25s;
-  border-radius: 0.25rem;
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.555), rgba(0, 0, 0, 0.616));
 }
 
 #foodList li {
