--- a/css/style.css
+++ b/css/style.css
@@ -337,3 +337,15 @@ i#facebookLogo:hover {
   transition: all ease-in-out 0.15s;
 }
 
+/*GUTSCHEIN*/
+
+h5{
+  padding: 1rem;
+}
+
+img#gutscheinImg {
+  width: 100%;
+  display: block;
+  padding: 1rem auto;
+  background-color: rgba(255, 255, 255, 0.43);
+}
