--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,17 @@ h5{
 img#gutscheinImg {
   width: 100%;
   display: block;
-  padding: 1rem auto;
-  background-color: rgba(255, 255, 255, 0.43);
+  margin: 1rem auto;
+  max-width: 500px;
+
+}
+
+/*-----------Media Query - 576px */
+
+@media (min-width: 576px) {
+
+  header{
+    background-size: cover;
+  }
+  
 }
