--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ img#logo {
 .bar {
   height: 5px;
   width: 100%;
-  background-color: rgb(204, 204, 204);
+  background: linear-gradient(45deg, rgb(194 130 94), rgb(251 216 199));
   display: block;
   border-radius: 5px;
   transition: 0.3s ease;
@@ -120,7 +120,7 @@ img#logo {
 }
 
 .nav li a {
-  color: #0c6957;
+  color: white;
   font-size: 1.25rem;
   text-decoration: none;
   font-family: 'Playfair Display', serif;
@@ -128,7 +128,7 @@ img#logo {
 }
 
 nav li a#gutschein {
-  color: rgb(112, 37, 37);
+  color: rgb(181, 61, 61);
 }
 
 .nav li a:hover {
@@ -145,7 +145,7 @@ nav li a#gutschein {
   z-index: 1;
   width: 0;
   height: 0;
-  background: radial-gradient(circle, rgba(243, 243, 243, 0.836), rgba(204, 203, 203, 0.918));
+  background: radial-gradient(circle, rgba(61, 61, 61, 0.836), rgba(0, 0, 0, 0.918));
   transition: 0.35s ease;
   box-shadow: 2px 3px 10px rgb(187, 187, 187);
 }
