--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
   text-decoration: none;
 }
 
+html {
+  background-color: #000000;
+}
+
+body {
+
+  margin: 0 auto;
+}
+
 ul {
   list-style-type: none;
 }
@@ -137,7 +146,6 @@ nav li a#gutschein {
 
 .menu-bg, #menu {
   top: 0;
-  left: 0;
   position: absolute;
 }
 
@@ -219,17 +227,16 @@ div#openHours {
   font-size: 1.15rem;
   text-align: center;
   box-shadow: -1px -5px 10px rgb(51, 50, 47);
-  position: sticky;
-  width: 100vw;
 }
 
 #openHours li {
   padding: 0.25rem;
 }
 
-li#freeDay {
+p#freeDay {
   border: solid 1px white;
   width: 60%;
+  max-width: 380px;
   text-align: center;
   padding: 0.5rem;
   color: rgb(214, 214, 214);
@@ -359,4 +366,99 @@ img#gutscheinImg {
     background-size: cover;
   }
   
+}
+
+/*-------------Media Query - 768px */
+
+@media (min-width: 769px){
+
+  header{
+   
+    width: 100%;
+    height: auto;
+    background: url('../img/header5.jpg');
+    background-size: cover;
+    background-attachment:  fixed;
+    min-height: 380px;
+  
+  }
+  
+  img#logo{
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.87),rgb(32, 32, 32));
+    max-width: 350px;
+    display: block;
+    margin-right: 0;
+    margin-left: auto;
+    border-left: solid 2px rgb(216, 162, 131);
+    border-bottom: solid 2px rgb(194 130 94);
+    border-bottom-left-radius: 0.5rem;
+    box-shadow: -3px 1px 10px rgb(216, 162, 131);
+    }
+  
+  div#menu{
+    width: 100%;
+    left: 0;
+    position: absolute;
+
+  }
+
+
+
+  nav ul{
+    display: flex;
+    justify-content: space-around;
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.87),rgb(32, 32, 32));
+    box-shadow: -3px 1px 10px rgb(216, 162, 131);
+  }
+
+  #menu-list{
+    border-top: solid 2px rgb(216, 162, 131);
+    border-bottom: solid 2px rgb(194 130 94);
+    padding: 0.75rem;
+
+  }
+
+
+  img#logo {
+    margin-top: 0rem;
+  }
+
+  ul#openHoursUl {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgba(31, 30, 30, 0.644);
+    border-radius: 0.25rem;
+    max-width: 420px;
+    margin: 0 auto;
+    padding: 0.5rem;
+  }
+
+  .change-bg {
+    display: none;
+
+  }
+
+  /*----------BUTTONS-------------*/
+
+  div#importantButtonsMobil {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+
+}
+
+  /*-----Footer -----*/
+
+  footer{
+    justify-content: center;
+  }
+
+  footer > div {
+    padding: 0.5rem;
+  }
+
+  div#LastMessage{
+    align-self: center;
+
+  }
 }
